--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>React</title>
+  </head>
+  <body>
     <div id="container"></div>
-    <script src="/static/bundle.js"></script>
-</body>
+    <script src='/static/bundle.js'>
+
+    </script>
+  </body>
 </html>
